fix: create book (#2)